# gnidEngine-sampleGame

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  SConstruct  game
include/: player.hpp
include/game/: game.hpp  player.hpp
models/: Cube.tmd  Plane.tmd  Sphere.tmd  SphereMonster.tmd  Triangle.tmd
src/: game.cpp  player.cpp
src/game/: game.cpp  player.cpp
